# fastapi-ulid-postgres

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yml  pyproject.toml  ruff.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025-03-15-02-36_355378c19715.py  2025-04-15-16-04_42d1db236a40.py  2025-04-15-16-34_a564964e5c4b.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: characters.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  base.py  character.py
app/models/: __init__.py  character.py  types.py  types_experiments.py
app/schemas/: __init__.py  character.py  ulid.py
app/utils/: database.py  datetime.py
tests/: conftest.py
tests/test_api/: test_chat_endpoints.py
